Configure yarn 3 for non-zero install

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,5 @@ jobs:
         with:
           node-version: '19'
           cache: 'yarn'
-      - run: corepack enable
-      - run: yarn install --frozen-lockfile
+      - run: yarn install --immutable
       - run: yarn build
