--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@
 # Generated files
 .docusaurus
 .cache-loader
-.yarn
 package-lock.json
 
 # Misc
@@ -20,3 +19,11 @@ package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
