--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "@docusaurus/core": "^2.4.0",
     "@docusaurus/preset-classic": "^2.4.0",
     "@docusaurus/theme-classic": "^2.4.0",
+    "@docusaurus/theme-common": "^2.4.0",
     "@docusaurus/theme-mermaid": "^2.4.0",
     "@mdx-js/react": "^1.6.22",
     "autoprefixer": "^10.4.13",
     "clsx": "^1.2.1",
     "docusaurus-preset-openapi": "^0.6.4",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.21",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "string_decoder": "^1.3.0",
     "tailwindcss": "^3.2.4",
     "url": "^0.11.0"
   },
@@ -49,5 +53,6 @@
   },
   "engines": {
     "node": ">=16.14"
-  }
+  },
+  "packageManager": "yarn@3.5.0"
 }
