--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/theme-classic": "^2.4.0",
     "@docusaurus/theme-common": "^2.4.0",
     "@docusaurus/theme-mermaid": "^2.4.0",
+    "@easyops-cn/docusaurus-search-local": "^0.35.0",
     "@mdx-js/react": "^1.6.22",
     "autoprefixer": "^10.4.13",
     "clsx": "^1.2.1",
