--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@docusaurus/core": "^2.4.0",
+    "@docusaurus/plugin-content-pages": "^2.4.0",
     "@docusaurus/preset-classic": "^2.4.0",
     "@docusaurus/theme-classic": "^2.4.0",
     "@docusaurus/theme-common": "^2.4.0",
@@ -23,6 +24,7 @@
     "@easyops-cn/docusaurus-search-local": "^0.35.0",
     "@mdx-js/react": "^1.6.22",
     "autoprefixer": "^10.4.13",
+    "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "docusaurus-preset-openapi": "^0.6.4",
     "path": "^0.12.7",
