--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@mdx-js/react": "^1.6.22",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
+    "docusaurus-plugin-sass": "^0.2.3",
     "docusaurus-preset-openapi": "^0.6.4",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2",
     "string_decoder": "^1.3.0",
     "url": "^0.11.0"
   },
