--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
     "string_decoder": "^1.3.0",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "use-http": "^1.0.28"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.4.1",
