--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,11 @@ package-lock.json
 
 # Misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*
+
+# Editor
+.vscode
+.idea
 
 npm-debug.log*
 yarn-debug.log*
