--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "redirects": [
-    { "source": "/", "destination": "/docs/introduction", "permanent": false }
+    { "source": "/", "destination": "/docs/introduction", "permanent": false },
+    { "source": "/docs/examples/examples-contract-gallery", "destination": "/docs/getting-started/contract-gallery", "permanent": false },
+    { "source": "/docs/examples/examples-starter-kit", "destination": "/docs/getting-started/marlowe-starter-kit", "permanent": false }
   ]
 }
