--- a/package.json
+++ b/package.json
@@ -16,32 +16,33 @@
   },
   "dependencies": {
     "@datapunt/matomo-tracker-react": "^0.5.1",
-    "@docusaurus/core": ">=2.3.0",
-    "@docusaurus/plugin-content-docs": ">=2.3.0",
-    "@docusaurus/plugin-content-pages": ">=2.3.0",
-    "@docusaurus/preset-classic": ">=2.3.0",
-    "@docusaurus/theme-classic": ">=2.3.0",
-    "@docusaurus/theme-common": ">=2.3.0",
-    "@docusaurus/theme-mermaid": ">=2.3.0",
+    "@docusaurus/core": "<2.3.0",
+    "@docusaurus/plugin-content-docs": "<2.3.0",
+    "@docusaurus/plugin-content-pages": "<2.3.0",
+    "@docusaurus/preset-classic": "<2.3.0",
+    "@docusaurus/theme-classic": "<2.3.0",
+    "@docusaurus/theme-common": "<2.3.0",
+    "@docusaurus/theme-mermaid": "<2.3.0",
     "@easyops-cn/docusaurus-search-local": "^0.35.0",
     "@mdx-js/react": "^1.6.22",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
-    "docusaurus-plugin-openapi-docs": "beta",
+    "docusaurus-plugin-openapi-docs": "^1.7.3",
     "docusaurus-plugin-sass": "^0.2.3",
-    "docusaurus-theme-openapi-docs": "beta",
+    "docusaurus-theme-openapi-docs": "^1.7.3",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-stately": "^3.24.0",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
     "string_decoder": "^1.3.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": ">=2.3.0",
+    "@docusaurus/module-type-aliases": "<2.3.0",
     "@tsconfig/docusaurus": "^1.0.7",
     "typescript": "^4.9.4"
   },
