--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
   },
   "dependencies": {
     "@datapunt/matomo-tracker-react": "^0.5.1",
-    "@docusaurus/core": "<2.3.0",
-    "@docusaurus/plugin-content-docs": "<2.3.0",
-    "@docusaurus/plugin-content-pages": "<2.3.0",
-    "@docusaurus/preset-classic": "<2.3.0",
-    "@docusaurus/theme-classic": "<2.3.0",
-    "@docusaurus/theme-common": "<2.3.0",
-    "@docusaurus/theme-mermaid": "<2.3.0",
+    "@docusaurus/core": "^2.4.1",
+    "@docusaurus/plugin-content-docs": "^2.4.1",
+    "@docusaurus/plugin-content-pages": "^2.4.1",
+    "@docusaurus/preset-classic": "^2.4.1",
+    "@docusaurus/theme-classic": "^2.4.1",
+    "@docusaurus/theme-common": "^2.4.1",
+    "@docusaurus/theme-mermaid": "^2.4.1",
     "@easyops-cn/docusaurus-search-local": "^0.35.0",
     "@mdx-js/react": "^1.6.22",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
-    "docusaurus-plugin-openapi-docs": "^1.7.3",
+    "docusaurus-plugin-openapi-docs": "^2.0.0-beta.3",
     "docusaurus-plugin-sass": "^0.2.3",
-    "docusaurus-theme-openapi-docs": "^1.7.3",
+    "docusaurus-theme-openapi-docs": "^2.0.0-beta.3",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "prism-react-renderer": "^1.3.5",
@@ -42,7 +42,7 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "<2.3.0",
+    "@docusaurus/module-type-aliases": "^2.4.1",
     "@tsconfig/docusaurus": "^1.0.7",
     "typescript": "^4.9.4"
   },
