--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@datapunt/matomo-tracker-react": "^0.5.1",
     "@docusaurus/core": "^2.4.3",
     "@docusaurus/plugin-content-docs": "^2.4.3",
     "@docusaurus/plugin-content-pages": "^2.4.3",
@@ -27,10 +26,12 @@
     "@mdx-js/react": "^1.6.22",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.10",
     "docusaurus-plugin-sass": "^0.2.5",
     "docusaurus-preset-openapi": "^0.6.4",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
+    "posthog-js": "^1.83.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
